--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Erik Ramsey
-description: 'Undergrad at University of Nevada Las Vegas'
+description: 'Computer Science Undergrad at University of Nevada Las Vegas'
 url: 'http://erikrramsey.github.io'
 baseurl: ''
 # google_analytics: 'UA-XXXXXX-X'
